formatting + fix warnings with mockito